<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SeleccionParametros">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="@font/old_standard_tt_bold"
        android:gravity="center"
        android:text="@string/escoger_ciudad"
        android:textColor="#6A6A6A"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entrada_ciudad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="postalAddress_locality"
        android:background="#E7E7E7"
        android:ems="10"
        android:hint="@string/ciudadHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="@font/old_standard_tt_bold"
        android:text="@string/escoger_recursos"
        android:textColor="#6A6A6A"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada_ciudad" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="393dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="130dp"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioDificil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/dif_dificil"
                android:textColor="@drawable/text_color"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/radioMedio"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/dif_medio"
                android:textColor="@drawable/text_color"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/radioFacil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/dif_facil"
                android:textColor="@drawable/text_color"
                android:textSize="21sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cartaDificil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#E7E7E7"
                app:cardCornerRadius="8dp">


                <TextView
                    android:id="@+id/textView71"
                    android:layout_width="wrap_content"
                    android:layout_height="115dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/dif_dificil_descripcion"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cartaMedia"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#E7E7E7"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="115dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/dif_medio_descripcion"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cartaFacil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                app:cardBackgroundColor="#E7E7E7"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="115dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/dif_facil_descripcion"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/boton_juego"
        style="@style/estilo_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"

        android:layout_marginTop="25dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/estilo_botones"

        android:fontFamily="sans-serif-black"
        android:text="@string/empezar_juego"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
