<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DescripcionAplicacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".DescripcionAplicacion">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="376dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.3"
            android:contentDescription="@string/logo_de_la_aplicaci_n"
            app:layout_constraintBottom_toBottomOf="@id/boton_ranking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/corona" />

        <TextView
            android:id="@+id/etiqueta_bienvenida"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/border"
            android:fontFamily="@font/old_standard_tt_bold"
            android:padding="15dp"
            android:text="@string/bienvenido_a_olympia"
            android:textAlignment="center"
            android:textColor="#6A6A6A"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descripcion_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/descripcion_aplicacion"
            android:textColor="@color/black_2"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etiqueta_bienvenida" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descripcion_app">

            <Button
                android:id="@+id/boton_empezar"
                style="@style/estilo_botones"
                android:layout_width="180dp"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:background="@drawable/estilo_botones"


                android:gravity="center"
                android:text="@string/entendido" />

            <Button
                android:id="@+id/boton_como_jugar"
                style="@style/estilo_botones"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/estilo_botones"
                android:gravity="center"
                android:text="@string/como_jugar" />
        </LinearLayout>

        <Button
            android:id="@+id/boton_ranking"
            style="@style/estilo_botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/estilo_botones"
            android:text="@string/ver_clasificacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>