<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ResumenJuego">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/old_standard_tt_bold"
            android:text="@string/titulo_resultados"
            android:textColor="#6A6A6A"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/bar_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/titulo" />

        <TextView
            android:id="@+id/medicion_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/medicion_1"
            android:textColor="#6A6A6A"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_graph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/bar_graph_1"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/medicion_1" />

        <TextView
            android:id="@+id/medicion_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/medicion_2"
            android:textColor="#6A6A6A"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_graph_1" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/bar_graph_2"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/medicion_2" />

        <TextView
            android:id="@+id/medicion_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/medicion_3"
            android:textColor="#6A6A6A"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_graph_2" />

        <TextView
            android:id="@+id/puntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/old_standard_tt_bold"
            android:text="@string/puntuacion"
            android:textColor="#6A6A6A"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/old_standard_tt_bold"
            android:text="@string/balance_final"
            android:textColor="#6A6A6A"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicion_3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance">

            <TextView
                android:id="@+id/recurso_presupuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:gravity="center"
                android:textColor="@color/spring"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/recurso_notoriedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:gravity="center"
                android:textColor="@color/spring"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/recurso_trabajadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:gravity="center"
                android:textColor="@color/spring"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/recurso_tiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/old_standard_tt"
                android:gravity="center"
                android:textColor="@color/spring"
                android:textSize="21sp" />
        </LinearLayout>

        <Button
            android:id="@+id/boton_avanzar"
            style="@style/estilo_botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/estilo_botones"

            android:gravity="center"
            android:text="@string/boton_volver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/puntuacion" />

        <Button
            android:id="@+id/boton_clasificacion"
            style="@style/estilo_botones"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"

            android:layout_marginBottom="20dp"
            android:background="@drawable/estilo_botones"
            android:gravity="center"
            android:text="@string/ver_clasificacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boton_avanzar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>